# rag-document-qa

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  render.yaml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-ci.yml
app/: __init__.py  config.py  main.py
app/services/: __init__.py  chunker.py  embedding.py  llm.py  loader.py  retriever.py  vector_store.py
app/static/: demo.html
eval/: dataset.json
eval/corpus/: computing_history.txt  space_exploration.txt
eval/reports/: after_warmup_reranker.json  baseline.json  baseline_reranker.json
hf_demo/: app.py  requirements.txt
scripts/: eval_rag.py  verify_trace.py
src/rag_qa/: __init__.py  config.py  models.py  pipeline.py
src/rag_qa/api/: main.py
src/rag_qa/api/routes/: documents.py  health.py  query.py
src/rag_qa/services/: __init__.py  chunker.py  embedder.py  llm.py  loader.py  reranker.py  retriever.py  vector_store.py
tests/: conftest.py
tests/integration/: test_api.py  test_loader.py
tests/live/: test_full_live_pipeline.py
tests/unit/: conftest.py  test_chunker.py  test_llm.py  test_pipeline.py  test_retriever.py  test_vector_store.py
ui/: index.html
