[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag-qa"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]",
    "pydantic-settings",
    "groq",
    "sentence-transformers",
    "qdrant-client",
    "rank-bm25",
    "pypdf",
    "python-docx",
    "python-multipart",
    "psutil",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "httpx", "ruff", "pyright"]

[tool.hatch.build.targets.wheel]
packages = ["src/rag_qa"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "live: marks tests as live/E2E against a real deployed instance (requires GROQ_API_KEY and usually a LIVE_API_BASE env var). Run with: pytest -m live",
    "slow: marks tests as slow (e.g. real model downloads or Groq calls)"
]
